--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -31,29 +31,96 @@
 
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+     const fifteen = inventors.filter(inventor=> {
+          if( inventor.year >= 1500 && inventor.year <= 1599){ //voorwaarde
+            return true; //keep it
+          }
+      }) 
 
-    // Array.prototype.map()
+      //Verkorte versie:
+      // const fifteen = invenstors.filter(inventor=> inventor.year>= 1500 && inventor.year<= 1599)
+
+
+console.table(fifteen);
+          //Filter loopt over alle invenstors adhv een functie en kijk of inventor.year groter
+          //is dan een waarde. Klopt dat? Dan is dit 'true' en steekt hij die in de CONST fifteen.
+
+
+
+    // Array.prototype.map() neemt een in een array en doet dar iets mee en returned een nieuwe array van de zelfde lengte.
+   
     // 2. Give us an array of the inventors first and last names
+      const fullNames = inventors.map(inventor => `${inventor.first} ${inventor.last}`);
+      console.log(fullNames);
 
-    // Array.prototype.sort()
+
+    // Array.prototype.sort() // 
     // 3. Sort the inventors by birthdate, oldest to youngest
+      const ordererd = inventors.sort( function(firstPerson, secondPerson){
+        if(firstPerson.year > secondPerson.year){
+          return 1;
+        } else{
+          return -1;
+        }
+
+
+      });
+
+      //verkorte versie
+      //const inventors =  inventors.sort((a,b) => a.year>b.year ? 1 : -1 );
+      console.table(ordererd);
+
+
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+      const totalYears =  inventors.reduce((total, inventor)=>{
+        return total + (inventor.passed - inventor.year);
+
+      },0);// eerste keer is er geen total meer dus moeten we deze op nul zetten.
+      console.log(totalYears);
 
     // 5. Sort the inventors by years lived
+      const oldest = inventors.sort(function(a,b){
+            const lastGuy = a.passed - a.year;
+            const nextGuy = b.passed - b.year;
+        return lastGuy > nextGuy ? -1:1;
+      })
+      console.table(oldest);
+
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
+      //const category =document.querySelector('.mw-category');
+      //const links = [... category.querySelectorAll('a')]; //zet alles van de nodelist in een array
+      //const links = Array.from(category.querySelectorAll('a'));
 
+      //const de = links
+                 // .map(link => link.textContent) // eerste mappen door de element van 'links ' te nemen en hier van de textContent te geven.
+                //  .filter(streetName => streetName.includes('de')); // daarna gaan we dat direct filtere of het woord 'de' includes.
+     
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
-
+       const alpha = people.sort((lastOne, nextOne)=>{
+          const [aLast, aFirst] = lastOne.split(', '); // geeft een array dus we moeten de split elke zijn eigen var geven
+          const [bLast, bFirst] = nextOne.split(', '); 
+          return aLast < bLast ? 1 : -1;
+       });
+       console.log(alpha);
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
 
+    const transportation = data.reduce((obj,item)=>{
+        if(!obj[item]){ // ALS dit object en zijn parameter nog niet bestaat
+          //hier zeg je dat het object "car, truck" altijd van 0 start om op te tellen
+          obj[item] = 0;
+        }
+        obj[item] ++; // dan ga je dit optellen want reduce telt dit op
+        return obj; // steek dit in het lege object
+    },{}) // we maken hier een object van zodat redce function dit hier in kan zetten.
+console.log(transportation);
   </script>
 </body>
 </html>
