--- a/15 - LocalStorage/index-FINISHED.html
+++ b/15 - LocalStorage/index-FINISHED.html
@@ -22,13 +22,15 @@
     <form class="add-items">
       <input type="text" name="item" placeholder="Item Name" required>
       <input type="submit" value="+ Add Item">
+      <input type="reset" value="reset">
     </form>
   </div>
 
 <script>
   const addItems = document.querySelector('.add-items');
   const itemsList = document.querySelector('.plates');
-  const items = JSON.parse(localStorage.getItem('items')) || [];
+  const resetList = document.querySelector('[type=reset]');
+    const items = JSON.parse(localStorage.getItem('items')) || [];
 
   function addItem(e) {
     e.preventDefault();
@@ -64,9 +66,18 @@
     populateList(items, itemsList);
   }
 
+  function emptyList(e){
+   
+      localStorage.clear();
+      location.reload();
+     // e.preventDefault();
+   
+  }
+  //functie schrijven om per item te deleten.
+
   addItems.addEventListener('submit', addItem);
   itemsList.addEventListener('click', toggleDone);
-
+  resetList.addEventListener('click', emptyList);
   populateList(items, itemsList);
 
 </script>
